--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
     "require": {
         "php": ">=5.5.0",
         "pda/pheanstalk": "v3.0.0",
-        "psr/log": "1.0.*@dev"
+        "psr/log": "1.0.*@dev|~1.0"
     }
 }
